--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,24 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.ejml', name: 'ejml-all', version: '0.38'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
 
 
 javafx {
     version = "14.0.1"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+mainClassName = "Main"
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
